apps/leuchtturm-io/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: leuchtturm-io
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 1.24.0
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/part-of: vaultwarden
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: http://vault.infrastructure.svc.cluster.local:8200
        vault.security.banzaicloud.io/vault-role: vaultwarden
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "\d+\.\d+\.\d+"
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/part-of: vaultwarden
        app.kubernetes.io/component: server
        app.kubernetes.io/version: 1.24.0
    spec:
      serviceAccountName: vaultwarden
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.24.0
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              cpu: 1m
              memory: 64Mi
            limits:
              cpu: 8m
              memory: 128Mi
