apps/leuchtturm-io/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: leuchtturm-io
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/component: vaultwarden
    app.kubernetes.io/version: 1.24.0
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: vaultwarden
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
