apps/leuchtturm-io/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: 50
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: true
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.leuchtturm.io
      secretName: vault.leuchtturm.io-tls
  rules:
    - host: vault.leuchtturm.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
